# On-Chain-Reputation-Oracle

./: .gitignore  LICENSE  README.md  pyproject.toml
ocro/: __init__.py  models.py  scoring.py
ocro/chains/: __init__.py  eth.py
onchain-rep-oracle/ocro/: config.py  metrics.py  scoring.py
onchain-rep-oracle/ocro/api/: main.py
onchain-rep-oracle/ocro/cli/: cli.py
tests/: __init__.py  conftest.py  test_eth_provider.py  test_scoring.py
